# scaffold

./: .gitignore  CASCADE_LLM_GENERATION_GUIDE.md  CHANGELOG.md  DIAGNOSTIC_REPORT.md  DIAGNOSTIC_REPORT_2.md  DIAG_CASCADE_SORT_REPORT.md  DIAG_ELEVATION_REPORT.md  DIAG_OUTPUT_BUFFER_REPORT.md  DIAG_PRESHIP_REPORT.md  DIAG_PWMASK_REPORT.md  DIAG_SENTINEL_REPORT.md  DIAG_SUBCOMMAND_REPORT.md  DIAG_SWEEP_REPORT.md  LICENSE  PRESET_PROMPT.txt  PROMPT.txt  README.md  SCHEMA_PROMPT.txt  cascade_diag.py  cascade_diag2.py  diag_cascade_sort.py  diag_elevation.py  diag_output.txt  diag_output_buffer.py  diag_pwmask.py  diag_sentinel.py  diag_subcommand.py  diag_sweep.py  pyproject.toml  scaffold.py  schema.md  test_diagnostic.py  test_examples.py  test_functional.py  test_manual_verification.py  test_preset_validation.py  test_security.py  test_smoke.py  v2.8.6 CASCADESLLMGEN_INFO.txt  verify_theme_consistency.py  (+1 more)
cascades/: aircrack_capture_chain.json  cascade_archive_playlist.json  cascade_nmap_ncat.json  cascade_pandoc_dual_output.json  cascade_ssh_scp.json  curl_api_chain.json  nmap_recon_chain.json  ping_then_nmap.json  recon_basic.json
scaffold_data/: PRESET_PROMPT.txt
tests/: invalid_bad_dependency.json  invalid_binary_path_traversal.json  invalid_binary_shell_chars.json  preset_roundtrip_all_types.json  preset_roundtrip_subcommands.json  test_bad_enum.json  test_bad_types.json  test_capture_types.json  test_display_groups.json  test_display_groups_subcmd.json  test_duplicate_flags.json  test_empty_args.json  test_minimal.json  test_missing_keys.json  (+4 more)
tools/: curl.json  (+16 more)
(+75 files in other folders)
